--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,9 @@
-Nisal Bandara <nisal.bandara@outlook.com>
+#
+# Filename      Author
+#
+pmodel.c        Nisal Bandara
+configure.ac    Nisal Bandara
+Makefile.am     Nisal Bandara
+README          Nisal Bandara
+NEWS            Nisal Bandara
+ChangeLog       Nisal Bandara
